<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group_1"
        >

        <item
            android:id="@+id/navigation_item_0"
            android:title="@string/navigation_item_0"
            android:icon="@drawable/ic_home"
            >

            <menu>
                <item
                    android:id="@+id/navigation_item_1"
                    android:title="@string/navigation_item_1"
                    android:icon="@drawable/ic_android"
                    />

                <item
                    android:id="@+id/navigation_item_2"
                    android:title="@string/navigation_item_2"
                    android:icon="@drawable/ic_android"
                    />

                <item
                    android:id="@+id/navigation_item_3"
                    android:title="@string/navigation_item_3"
                    android:icon="@drawable/ic_android"/>

                <item
                    android:id="@+id/navigation_item_5"
                    android:title="@string/navigation_item_5"
                    android:icon="@drawable/ic_android"/>

                <item
                    android:id="@+id/navigation_item_6"
                    android:title="@string/navigation_item_6"
                    android:icon="@drawable/ic_android"/>



            </menu>

            </item>



    </group>





    <group android:checkableBehavior="single"
        android:id="@+id/group_2">

    <item
        android:id="@+id/navigation_item_7"
        android:title="@string/navigation_item_7"
        android:icon="@drawable/ic_android">

        <menu>
            <item
                android:id="@+id/navigation_item_8"
                android:title="@string/navigation_item_8"
                android:icon="@drawable/ic_android"/>

            <item
                android:id="@+id/navigation_item_9"
                android:title="@string/navigation_item_9"
                android:icon="@drawable/ic_android"/>
        </menu>

        </item>


    </group>

</menu>